--- a/.env
+++ b/.env
@@ -12,15 +12,12 @@ CAN_DELETE_FILE=yes
 # USE_HEADLESS=yes
 
 # 数据库信息 - 暂未使用
-DB_HOST='localhost'
+DB_HOST='172.30.64.27'
 DB_PORT=3306
 DB_USERNAME='root'
-DB_PASSWORD='123456'
-DB_DATABASE='yice-performance'
+DB_PASSWORD='mysql57'
+DB_DATABASE='mysql'
 
-# devops 的默认用户名和密码
-DEVOPS_USERNAME="admin@dtstack.com"
-DEVOPS_PASSWORD="123456"
 
 # 钉钉告警机器人
 ALARM_WEBHOOK=""
