--- a/web/package.json
+++ b/web/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "NODE_ENV=development vite --port 7001",
+        "dev": "NODE_ENV=development vite --port 7001 --host",
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
